fixed title and pagination align and added WA3, WA4 images

--- a/src/components/ProjectCard.css
+++ b/src/components/ProjectCard.css
@@ -24,7 +24,8 @@
   gap: 5px;
 }
 
-.card__title__container>* {
+.card__title__container>*,
+.card__title__container>*>* {
   margin: 0;
 }
 
